--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,14 @@
 
     <title>HG Project</title>
 </head>
-<header id = "header1">
-            <a href="index.html">Home</a>
-            <a href="stories.html">Stories</a>
-</header>
-<body>
 
+<body>
+    <header id = "header1">
+        <div class="navButtons">
+        <a href="index.html">Home</a>
+        <a href="stories.html">Stories</a>
+        </div>
+    </header>  
     
 
 
